# assimp-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js  travis-install-assimp.sh
assimp/: index.html  sidebar-items.js  stability.html  stability.json  struct.Animation.html  struct.Camera.html  struct.Face.html  struct.Light.html  struct.Material.html  struct.Mesh.html  struct.Node.html  struct.Scene.html  struct.Texture.html
assimp-sys/: Cargo.toml  README.md
assimp-sys/src/: anim.rs  camera.rs  cexport.rs  cfileio.rs  cimport.rs  config.rs  importerdesc.rs  lib.rs  light.rs  material.rs  mesh.rs  metadata.rs  postprocess.rs  scene.rs  texture.rs  version.rs
assimp-sys/src/types/: color3.rs  color4.rs  matrix3.rs  matrix4.rs  mod.rs  quaternion.rs  string.rs  vector2.rs  vector3.rs
assimp-sys/tests/: matrix.rs  props.rs  sanity.rs  string.rs  version.rs
assimp_sys/: constant.AIIMPORTERFLAG_EXPERIMENTAL.html  constant.AIIMPORTERFLAG_LIMITED_SUPPORT.html  constant.AIIMPORTERFLAG_SUPPORT_BINARY_FLAVOUR.html  constant.AIIMPORTERFLAG_SUPPORT_COMPRESSED_FLAVOUR.html  constant.AIIMPORTERFLAG_SUPPORT_TEXT_FLAVOUR.html  constant.AIPRIMITIVETYPE_LINE.html  constant.AIPRIMITIVETYPE_POINT.html  constant.AIPRIMITIVETYPE_POLYGON.html  constant.AIPRIMITIVETYPE_TRIANGLE.html  constant.AIPROCESS_CALC_TANGENT_SPACE.html  constant.AIPROCESS_CONVERT_TO_LEFT_HANDED.html  constant.AIPROCESS_DEBONE.html  constant.AIPROCESS_FIND_DEGENERATES.html  constant.AIPROCESS_FIND_INSTANCES.html  constant.AIPROCESS_FIND_INVALID_DATA.html  constant.AIPROCESS_FIX_INFACING_NORMALS.html  constant.AIPROCESS_FLIP_UVS.html  constant.AIPROCESS_FLIP_WINDING_ORDER.html  constant.AIPROCESS_GEN_NORMALS.html  constant.AIPROCESS_GEN_SMOOTH_NORMALS.html  constant.AIPROCESS_GEN_UV_COORDS.html  constant.AIPROCESS_IMPROVE_CACHE_LOCALITY.html  constant.AIPROCESS_JOIN_IDENTICAL_VERTICES.html  constant.AIPROCESS_LIMIT_BONE_WEIGHTS.html  (+164 more)
(+599 files in other folders)
