[package]
name = "assimp"
version = "0.0.1"
authors = ["Lee Jeffery <lee@leejeffery.co.uk>"]

description = "Rust bindings for the Assimp library"
repository = "https://github.com/Eljay/assimp-rs"

license = "MIT"
readme = "README.md"

[dependencies]
assimp-sys = "*"
cgmath = "*"
libc = "*"

[dev-dependencies]
glium = "*"
glutin = "*"
