[package]
name = "assimp"
version = "0.0.4"
authors = ["Lee Jeffery <lee@leejeffery.co.uk>"]

description = "Rust bindings for the Assimp library"
repository = "https://github.com/Eljay/assimp-rs"

license = "MIT"
readme = "README.md"

[dependencies]
assimp-sys = "0.0.3"
cgmath = "0.1.5"
libc = "0.1.7"

[dev-dependencies]
glium = "0.3.7"
glutin = "0.1.4"
