[package]
name = "assimp-sys"
version = "0.0.2"
authors = ["Lee Jeffery <lee@leejeffery.co.uk>"]

description = "Rust FFI bindings for the Assimp library"
repository = "https://github.com/Eljay/assimp-rs"

license = "MIT"
readme = "README.md"

# Cargo packaging doesn't seem to comply with .gitignore in sub-package
exclude = ["*.dll"]

[dependencies]
libc = "*"
bitflags = "*"
